modified:   .gitignore 	new file:   LabTwo/bin/csci232.iml 	new file:   LabTwo/bin/readme.txt 	new file:   LabTwo/src/InteractivePercolationVisualizer.java 	modified:   LabTwo/src/Percolation.java 	modified:   LabTwo/src/PercolationStats.java 	new file:   LabTwo/src/csci232.iml 	new file:   LabTwo/src/readme.txt 	new file:   Sorting/.vscode/settings.json 	new file:   Sorting/README.md 	new file:   Sorting/src/App.java 	new file:   Sorting/src/BogoSort.java 	new file:   Sorting/src/MergeSort.java 	new file:   Sorting/src/NaturalMergeSort.java

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ hs_err_pid*
 # other files
 HelloWorld/Lab1Complete.txt
 LabTwo/percolation/*
+LabTwo/bin/images/*
+LabTwo/bin/inputs/*
+LabTwo/src/images/*
+LabTwo/src/inputs/*
