new file:   LabFour/src/IteratorClient.java 	new file:   LabFour/src/LinkedQueue.java 	new file:   LabFour/src/RandomizedBag.java 	new file:   LabFour/src/ResizingArrayStack.java 	new file:   LabFour/src/Subset.java 	modified:   LabTwo/bin/readme.txt 	modified:   LabTwo/src/readme.txt 	new file:   Simulation/.vscode/launch.json 	new file:   Simulation/.vscode/settings.json 	new file:   Simulation/README.md 	new file:   Simulation/src/Ball.java 	new file:   Simulation/src/BouncingBalls.java 	new file:   Simulation/src/CollisionSystem.java 	new file:   Simulation/src/MinPQ.java 	new file:   Simulation/src/Particle.java

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,60 @@ LabTwo/bin/images/*
 LabTwo/bin/inputs/*
 LabTwo/src/images/*
 LabTwo/src/inputs/*
+LabFour/README.md
+LabFour/.vscode/settings.json
+LabFour/bin/.lift/checkstyle-coursera.xml
+LabFour/bin/.lift/checkstyle-suppressions.xml
+LabFour/bin/.lift/spotbugs.xml
+LabFour/lab04/csci232.iml
+LabFour/lab04/.idea/.gitignore
+LabFour/lab04/.idea/.name
+LabFour/lab04/.idea/checkstyle-idea.xml
+LabFour/lab04/.idea/codeInsightSettings.xml
+LabFour/lab04/.idea/compiler.xml
+LabFour/lab04/.idea/externalDependencies.xml
+LabFour/lab04/.idea/file.template.settings.xml
+LabFour/lab04/.idea/findbugs-idea.xml
+LabFour/lab04/.idea/misc.xml
+LabFour/lab04/.idea/modules.xml
+LabFour/lab04/.idea/saveactions_settings.xml
+LabFour/lab04/.idea/codeStyles/codeStyleConfig.xml
+LabFour/lab04/.idea/codeStyles/Project.xml
+LabFour/lab04/.idea/dictionaries/lift.xml
+LabFour/lab04/.idea/fileTemplates/includes/File Header.java
+LabFour/lab04/.idea/fileTemplates/internal/AnnotationType.java
+LabFour/lab04/.idea/fileTemplates/internal/Class.java
+LabFour/lab04/.idea/fileTemplates/internal/Enum.java
+LabFour/lab04/.idea/fileTemplates/internal/Interface.java
+LabFour/lab04/.idea/fileTemplates/internal/module-info.java
+LabFour/lab04/.idea/fileTemplates/internal/package-info.java
+LabFour/lab04/.idea/inspectionProfiles/COS_126.xml
+LabFour/lab04/.idea/inspectionProfiles/profiles_settings.xml
+LabFour/lab04/.idea/libraries/introcs.xml
+LabFour/src/.lift/checkstyle-coursera.xml
+LabFour/src/.lift/checkstyle-suppressions.xml
+LabFour/src/.lift/spotbugs.xml
+LabTwo/bin/readme.txt
+Simulation/inputs/billiards2.txt
+Simulation/inputs/billiards4.txt
+Simulation/inputs/billiards5.txt
+Simulation/inputs/brownian.txt
+Simulation/inputs/brownian2.txt
+Simulation/inputs/diagonal.txt
+Simulation/inputs/diagonal1.txt
+Simulation/inputs/diagonal2.txt
+Simulation/inputs/diffusion.txt
+Simulation/inputs/diffusion2.txt
+Simulation/inputs/diffusion3.txt
+Simulation/inputs/p100-.5K.txt
+Simulation/inputs/p100-.125K.txt
+Simulation/inputs/p100-2K.txt
+Simulation/inputs/p1000-.5K.txt
+Simulation/inputs/p1000-2K.txt
+Simulation/inputs/p2000.txt
+Simulation/inputs/pendulum.txt
+Simulation/inputs/squeeze.txt
+Simulation/inputs/squeeze2.txt
+Simulation/inputs/wallbouncing.txt
+Simulation/inputs/wallbouncing2.txt
+Simulation/inputs/wallbouncing3.txt
