modified:   .gitignore 	modified:   LabTwo/bin/readme.txt 	modified:   LabTwo/src/readme.txt 	new file:   Sorting/src/Heap.java 	modified:   Sorting/src/MaxPQ.java

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ Simulation/inputs/squeeze2.txt
 Simulation/inputs/wallbouncing.txt
 Simulation/inputs/wallbouncing2.txt
 Simulation/inputs/wallbouncing3.txt
+LabTwo/src/Bova_Jake_Lab2/Percolation.java
+LabTwo/src/Bova_Jake_Lab2/PercolationStats.java
+LabTwo/src/Bova_Jake_Lab2/readme.txt
+LabTwo/bin/Bova_Jake_Lab2/readme.txt
