modified:   .gitignore 	new file:   LabEight/.vscode/settings.json 	new file:   LabEight/README.md 	new file:   LabEight/src/HashProbing.java 	new file:   LabEight/src/ThreeSumHash.java 	modified:   LabFive/readme.txt

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ LabTwo/src/Bova_Jake_Lab2/Percolation.java
 LabTwo/src/Bova_Jake_Lab2/PercolationStats.java
 LabTwo/src/Bova_Jake_Lab2/readme.txt
 LabTwo/bin/Bova_Jake_Lab2/readme.txt
+LabFive/Bova_Jake_Lab5/Autocomplete.java
+LabFive/Bova_Jake_Lab5/BinarySearchDeluxe.java
+LabFive/Bova_Jake_Lab5/readme.txt
+LabFive/Bova_Jake_Lab5/Term.java
