--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,31 @@ LabFive/Bova_Jake_Lab5/Autocomplete.java
 LabFive/Bova_Jake_Lab5/BinarySearchDeluxe.java
 LabFive/Bova_Jake_Lab5/readme.txt
 LabFive/Bova_Jake_Lab5/Term.java
+LabFinal/wordnet/.DS_Store
+LabFinal/wordnet/csci232.iml
+LabFinal/wordnet/.idea/inspectionProfiles/COS_126.xml
+LabFinal/wordnet/.idea/inspectionProfiles/profiles_settings.xml
+LabFinal/wordnet/.idea/libraries/introcs.xml
+LabFinal/wordnet/.lift/checkstyle-coursera.xml
+LabFinal/wordnet/.lift/checkstyle-suppressions.xml
+LabFinal/wordnet/.lift/spotbugs.xml
+LabFinal/wordnet/.idea/.name
+LabFinal/wordnet/.idea/checkstyle-idea.xml
+LabFinal/wordnet/.idea/codeInsightSettings.xml
+LabFinal/wordnet/.idea/compiler.xml
+LabFinal/wordnet/.idea/externalDependencies.xml
+LabFinal/wordnet/.idea/file.template.settings.xml
+LabFinal/wordnet/.idea/findbugs-idea.xml
+LabFinal/wordnet/.idea/misc.xml
+LabFinal/wordnet/.idea/modules.xml
+LabFinal/wordnet/.idea/saveactions_settings.xml
+LabFinal/wordnet/.idea/codeStyles/codeStyleConfig.xml
+LabFinal/wordnet/.idea/codeStyles/Project.xml
+LabFinal/wordnet/.idea/dictionaries/lift.xml
+LabFinal/wordnet/.idea/fileTemplates/includes/File Header.java
+LabFinal/wordnet/.idea/fileTemplates/internal/AnnotationType.java
+LabFinal/wordnet/.idea/fileTemplates/internal/Class.java
+LabFinal/wordnet/.idea/fileTemplates/internal/Enum.java
+LabFinal/wordnet/.idea/fileTemplates/internal/Interface.java
+LabFinal/wordnet/.idea/fileTemplates/internal/module-info.java
+LabFinal/wordnet/.idea/fileTemplates/internal/package-info.java
