modified:   .gitignore 	modified:   LabFinal/.vscode/settings.json 	new file:   LabFinal/src/CustomBFS.java 	modified:   LabFinal/src/Outcast.java 	modified:   LabFinal/src/ShortestCommonAncestor.java 	modified:   LabFinal/wordnet/readme.txt

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ LabFinal/wordnet/.idea/fileTemplates/internal/Enum.java
 LabFinal/wordnet/.idea/fileTemplates/internal/Interface.java
 LabFinal/wordnet/.idea/fileTemplates/internal/module-info.java
 LabFinal/wordnet/.idea/fileTemplates/internal/package-info.java
+LabFinal/.vscode/settings.json
