--- a/LabFinal/.vscode/settings.json
+++ b/LabFinal/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "/home/jake/School/Spring2023/Algo/jars/algs4.jar",
+        "/home/jake/School/Spring2023/Algo/jars/stdlib.jar"
     ]
 }
